미션 모범 답안으로 교체