@@ -1,8 +1,9 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.user.UserCreateRequest;
-import com.sprint.mission.discodeit.dto.user.UserResponse;
-import com.sprint.mission.discodeit.dto.user.UserUpdateRequest;
+import com.sprint.mission.discodeit.dto.data.UserDto;
+import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
+import com.sprint.mission.discodeit.dto.request.UserCreateRequest;
+import com.sprint.mission.discodeit.dto.request.UserUpdateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.entity.UserStatus;
@@ -13,81 +14,126 @@ import com.sprint.mission.discodeit.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.Instant;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class BasicUserService implements UserService {
     private final UserRepository userRepository;
+    //
     private final BinaryContentRepository binaryContentRepository;
     private final UserStatusRepository userStatusRepository;
 
-    public UserResponse create(UserCreateRequest request) {
-        if (userRepository.findByUsername(request.username()).isPresent() ||
-                userRepository.findByEmail(request.email()).isPresent()) {
-            throw new IllegalArgumentException("이미 존재하는 username 또는 email입니다.");
+    @Override
+    public User create(UserCreateRequest userCreateRequest, Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
+        String username = userCreateRequest.username();
+        String email = userCreateRequest.email();
+
+        if (userRepository.existsByEmail(email)) {
+            throw new IllegalArgumentException("User with email " + email + " already exists");
+        }
+        if (userRepository.existsByUsername(username)) {
+            throw new IllegalArgumentException("User with username " + username + " already exists");
         }
 
-        User user = new User(request.username(), request.email(), request.password());
-        userRepository.save(user);
+        UUID nullableProfileId = optionalProfileCreateRequest
+                .map(profileRequest -> {
+                    String fileName = profileRequest.fileName();
+                    String contentType = profileRequest.contentType();
+                    byte[] bytes = profileRequest.bytes();
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long)bytes.length, contentType, bytes);
+                    return binaryContentRepository.save(binaryContent).getId();
+                })
+                .orElse(null);
+        String password = userCreateRequest.password();
 
-        if (request.profileImage() != null) {
-            BinaryContent profileImage = new BinaryContent(user.getId(), null);
-            binaryContentRepository.save(profileImage);
-        }
+        User user = new User(username, email, password, nullableProfileId);
+        User createdUser = userRepository.save(user);
 
-        UserStatus userStatus = new UserStatus(user.getId());
+        Instant now = Instant.now();
+        UserStatus userStatus = new UserStatus(createdUser.getId(), now);
         userStatusRepository.save(userStatus);
 
-        return new UserResponse(user.getId(), user.getUsername(), user.getEmail(), userStatus.isOnline());
+        return createdUser;
     }
 
-    public Optional<UserResponse> find(UUID userId) {
-        return userRepository.findById(userId).map(user -> {
-            boolean isOnline = userStatusRepository.findByUserId(user.getId())
-                    .map(UserStatus::isOnline).orElse(false);
-            return new UserResponse(user.getId(), user.getUsername(), user.getEmail(), isOnline);
-        });
+    @Override
+    public UserDto find(UUID userId) {
+        return userRepository.findById(userId)
+                .map(this::toDto)
+                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
     }
 
-    public List<UserResponse> findAll() {
-        return userRepository.findAll().parallelStream()
-                .map(user -> {
-                    boolean isOnline = userStatusRepository.findByUserId(user.getId())
-                            .map(UserStatus::isOnline).orElse(false);
-                    return new UserResponse(user.getId(), user.getUsername(), user.getEmail(), isOnline);
-                }).collect(Collectors.toList());
+    @Override
+    public List<UserDto> findAll() {
+        return userRepository.findAll()
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
-    public void update(UserUpdateRequest request) {
-        User user = userRepository.findById(request.id()).orElseThrow(() ->
-                new IllegalArgumentException("존재하지 않는 사용자입니다.")
-        );
+    @Override
+    public User update(UUID userId, UserUpdateRequest userUpdateRequest, Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
 
-        user.update(request.username(), request.email(), request.password());
-        userRepository.save(user);
-
-        if (request.profileImage() != null) {
-            binaryContentRepository.findByUserId(user.getId())
-                    .forEach(image -> binaryContentRepository.deleteById(image.getId()));
-
-            BinaryContent profileImage = new BinaryContent(user.getId(), null);
-            binaryContentRepository.save(profileImage);
+        String newUsername = userUpdateRequest.newUsername();
+        String newEmail = userUpdateRequest.newEmail();
+        if (userRepository.existsByEmail(newEmail)) {
+            throw new IllegalArgumentException("User with email " + newEmail + " already exists");
         }
+        if (userRepository.existsByUsername(newUsername)) {
+            throw new IllegalArgumentException("User with username " + newUsername + " already exists");
+        }
+
+        UUID nullableProfileId = optionalProfileCreateRequest
+                .map(profileRequest -> {
+                    Optional.ofNullable(user.getProfileId())
+                                    .ifPresent(binaryContentRepository::deleteById);
+
+                    String fileName = profileRequest.fileName();
+                    String contentType = profileRequest.contentType();
+                    byte[] bytes = profileRequest.bytes();
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long) bytes.length, contentType, bytes);
+                    return binaryContentRepository.save(binaryContent).getId();
+                })
+                .orElse(null);
+
+        String newPassword = userUpdateRequest.newPassword();
+        user.update(newUsername, newEmail, newPassword, nullableProfileId);
+
+        return userRepository.save(user);
     }
 
+    @Override
     public void delete(UUID userId) {
-        User user = userRepository.findById(userId).orElseThrow(() ->
-                new IllegalArgumentException("존재하지 않는 사용자입니다.")
-        );
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
 
-        userStatusRepository.findByUserId(userId).ifPresent(status -> userStatusRepository.deleteById(status.getId()));
-        binaryContentRepository.findByUserId(userId).forEach(image -> binaryContentRepository.deleteById(image.getId()));
+        Optional.ofNullable(user.getProfileId())
+                        .ifPresent(binaryContentRepository::deleteById);
+        userStatusRepository.deleteByUserId(userId);
 
         userRepository.deleteById(userId);
     }
-}
 
+    private UserDto toDto(User user) {
+        Boolean online = userStatusRepository.findByUserId(user.getId())
+                .map(UserStatus::isOnline)
+                .orElse(null);
+
+        return new UserDto(
+                user.getId(),
+                user.getCreatedAt(),
+                user.getUpdatedAt(),
+                user.getUsername(),
+                user.getEmail(),
+                user.getProfileId(),
+                online
+        );
+    }
+}
