@@ -1,78 +1,80 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.userstatus.UserStatusCreateRequest;
-import com.sprint.mission.discodeit.dto.userstatus.UserStatusResponse;
-import com.sprint.mission.discodeit.dto.userstatus.UserStatusUpdateByUserIdRequest;
-import com.sprint.mission.discodeit.dto.userstatus.UserStatusUpdateRequest;
-import com.sprint.mission.discodeit.entity.*;
-import com.sprint.mission.discodeit.repository.*;
+import com.sprint.mission.discodeit.dto.request.UserStatusCreateRequest;
+import com.sprint.mission.discodeit.dto.request.UserStatusUpdateRequest;
+import com.sprint.mission.discodeit.entity.UserStatus;
+import com.sprint.mission.discodeit.repository.UserRepository;
+import com.sprint.mission.discodeit.repository.UserStatusRepository;
 import com.sprint.mission.discodeit.service.UserStatusService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.time.Instant;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.UUID;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class BasicUserStatusService implements UserStatusService {
     private final UserStatusRepository userStatusRepository;
     private final UserRepository userRepository;
 
     @Override
-    public UserStatusResponse create(UserStatusCreateRequest request) {
-        if (!userRepository.existsById(request.userId())) {
-            throw new NoSuchElementException("User with id " + request.userId() + " not found");
+    public UserStatus create(UserStatusCreateRequest request) {
+        UUID userId = request.userId();
+
+        if (!userRepository.existsById(userId)) {
+            throw new NoSuchElementException("User with id " + userId + " does not exist");
+        }
+        if (userStatusRepository.findByUserId(userId).isPresent()) {
+            throw new IllegalArgumentException("UserStatus with id " + userId + " already exists");
         }
 
-        Optional<UserStatus> existingStatus = userStatusRepository.findByUserId(request.userId());
-        if (existingStatus.isPresent()) {
-            existingStatus.get().updateStatus();
-            userStatusRepository.save(existingStatus.get());
-            return new UserStatusResponse(existingStatus.get().getId(), existingStatus.get().getUserId(), existingStatus.get().getUpdatedAt(), existingStatus.get().isOnline());
-        }
-
-        UserStatus userStatus = new UserStatus(request.userId());
-        userStatusRepository.save(userStatus);
-        return new UserStatusResponse(userStatus.getId(), userStatus.getUserId(), userStatus.getUpdatedAt(), userStatus.isOnline());
+        Instant lastActiveAt = request.lastActiveAt();
+        UserStatus userStatus = new UserStatus(userId, lastActiveAt);
+        return userStatusRepository.save(userStatus);
     }
 
     @Override
-    public Optional<UserStatusResponse> find(UUID id) {
-        return userStatusRepository.findById(id).map(status ->
-                new UserStatusResponse(status.getId(), status.getUserId(), status.getUpdatedAt(), status.isOnline()));
+    public UserStatus find(UUID userStatusId) {
+        return userStatusRepository.findById(userStatusId)
+                .orElseThrow(() -> new NoSuchElementException("UserStatus with id " + userStatusId + " not found"));
     }
 
     @Override
-    public List<UserStatusResponse> findAll() {
+    public List<UserStatus> findAll() {
         return userStatusRepository.findAll().stream()
-                .map(status -> new UserStatusResponse(status.getId(), status.getUserId(), status.getUpdatedAt(), status.isOnline()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public void update(UserStatusUpdateRequest request) {
-        UserStatus userStatus = userStatusRepository.findById(request.id())
-                .orElseThrow(() -> new NoSuchElementException("UserStatus with id " + request.id() + " not found"));
+    public UserStatus update(UUID userStatusId, UserStatusUpdateRequest request) {
+        Instant newLastActiveAt = request.newLastActiveAt();
 
-        userStatus.updateStatus();
-        userStatusRepository.save(userStatus);
+        UserStatus userStatus = userStatusRepository.findById(userStatusId)
+                .orElseThrow(() -> new NoSuchElementException("UserStatus with id " + userStatusId + " not found"));
+        userStatus.update(newLastActiveAt);
+
+        return userStatusRepository.save(userStatus);
     }
 
     @Override
-    public void updateByUserId(UserStatusUpdateByUserIdRequest request) {
-        UserStatus userStatus = userStatusRepository.findByUserId(request.userId())
-                .orElseThrow(() -> new NoSuchElementException("UserStatus for userId " + request.userId() + " not found"));
+    public UserStatus updateByUserId(UUID userId, UserStatusUpdateRequest request) {
+        Instant newLastActiveAt = request.newLastActiveAt();
 
-        userStatus.updateStatus();
-        userStatusRepository.save(userStatus);
+        UserStatus userStatus = userStatusRepository.findByUserId(userId)
+                .orElseThrow(() -> new NoSuchElementException("UserStatus with userId " + userId + " not found"));
+        userStatus.update(newLastActiveAt);
+
+        return userStatusRepository.save(userStatus);
     }
 
     @Override
-    public void delete(UUID id) {
-        if (userStatusRepository.findById(id).isEmpty()) {
-            throw new NoSuchElementException("UserStatus with id " + id + " not found");
+    public void delete(UUID userStatusId) {
+        if (!userStatusRepository.existsById(userStatusId)) {
+            throw new NoSuchElementException("UserStatus with id " + userStatusId + " not found");
         }
-        userStatusRepository.deleteById(id);
+        userStatusRepository.deleteById(userStatusId);
     }
 }
